css/main.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  line-height: 1.6;
}

body {
  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
    "Lucida Sans", Arial, sans-serif;
}

nav {
  display: grid;
  grid-template-areas: "navigation-bar social-media";
  width: 80%;
  margin: auto;
  margin-top: 3%;
  grid-gap: 40em;
}

nav .social-media {
  text-align: end;
}

a {
  color: black;
  text-decoration: none;
}

.navigation-bar a .active {
  font-weight: 1000;
  color: aqua;
}

li {
  list-style: none;
  display: inline;
  padding: 1em;
  text-transform: uppercase;
  cursor: pointer;
}

li:hover {
  font-weight: 900;
}

i {
  margin-right: 1em;
  cursor: pointer;
}

i:hover {
  transform: scale(2, 2);
}

.header {
  text-align: center;
  width: auto;
  margin-top: 3%;
  margin-bottom: 2%;
}

h1 {
  font-size: 5em;
}

h2,
h3,
h4,
h5 {
  font-weight: 600;
}

hr {
  width: 80%;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 2%;
}

.container {
  display: grid;
  grid-template-areas: "left-container right-container";
  width: 80%;
  margin: auto;
  grid-gap: 2em;
  text-align: left;
}

.contents {
  margin-bottom: 2%;
  text-align: justify;
}

.contents h3,
p {
  margin-bottom: 1em;
}

.contents p {
  margin-bottom: 2%;
}

.contents img {
  align-items: center;
}

.image-overlay {
  position: relative;
  width: 100%;
  height: 36em;
}
.image-overlay img {
  text-align: center;
  margin-bottom: 1em;
}
.image {
  opacity: 1;
  display: block;
  height: 36em;
  width: 100%;
  transition: 0.5s ease;
  backface-visibility: hidden;
}
.middle {
  transition: 0.5s ease;
  opacity: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  text-align: center;
}
.image-overlay:hover .image {
  opacity: 0.3;
}

.image-overlay:hover .middle {
  opacity: 1;
}

.text {
  background-color: black;
  color: white;
  font-size: 0.9em;
  padding: 1em 1em;
}
.text a {
  color: white;
}
.read-more-btn {
  /* margin-bottom: 0.5em; */
  float: right;
  clear: right;
}

.button {
  border: 1px solid black;
  display: inline-block;
  padding: 10px 20px;
  text-decoration: none;
  color: white;
  background-color: black;
  text-align: center;
  cursor: pointer;
  border-radius: 10px;
}

.button:hover {
  border: 1px solid black;
  background: white;
  color: black;
}

th {
  background-color: black;
  color: white;
}
th,
tr,
td {
  margin-bottom: 10px;
  border: 1px solid black;
  padding: 10px;
}

table {
  width: 100%;
  text-align: center;
  margin-bottom: 10px;
}

.other-topics li {
  display: block;
  padding: 5px;
  text-align: center;
  text-transform: none;
  opacity: 0.8;
}

.other-topics {
  text-align: center;
  grid-area: other-topics;
}

.other-topics h3 {
  background-color: black;
  color: white;
  padding: 10px;
}

.row {
  display: block;
  padding: 5px;
  text-align: center;
  text-transform: none;
  opacity: 0.8;
}

.image-column,
.items-column {
  float: left;
  width: 25%;
  padding: 0;
}

.row:after {
  content: "";
  display: table;
  clear: both;
}

.image-column img {
  width: 30px;
  height: 30px;
}

.hide {
  visibility: hidden;
}

.get-in-touch {
  margin-top: 10%;
  border: 1px solid black;
  padding: 25px 10px;
  text-align: center;
}

.get-in-touch h3,
h4 {
  margin-bottom: 5px;
  font-weight: 300;
}

.get-in-touch input {
  vertical-align: middle;
  margin: 5px 10px 5px 0;
  padding: 20px;
  background-color: #fff;
  border: 1px solid #ddd;
  width: 48%;
  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
    "Lucida Sans", Arial, sans-serif;
}

.contents {
  grid-area: contents;
}

footer {
  padding: 20px;
  background: linear-gradient(45deg, black, white);
  color: white;
  text-align: center;
  margin-top: 2%;
  margin-bottom: 0;
}

